iptables
# Generated by iptables-save v1.4.21 on Sat Sep 14 14:44:03 2019
*filter
:INPUT DROP [0:0]
:FORWARD ACCEPT [0:0]
:OUTPUT ACCEPT [24:4672]
:syn-flood - [0:0]
-A INPUT -m state --state RELATED,ESTABLISHED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i lo -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 21 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 22 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 80 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 443 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 801 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 802 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 803 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3000:3005 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 3306 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 5920 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6379 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 6390 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8080 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 8087 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 10021 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 10050:10051 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 10080 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 10081 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 10088 -j ACCEPT
-A INPUT -p tcp -m state --state NEW -m tcp --dport 10089 -j ACCEPT
-A INPUT -j REJECT --reject-with icmp-host-prohibited
-A INPUT -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -j syn-flood
-A INPUT -i eth0 -p tcp -m tcp --tcp-flags FIN,SYN,RST,ACK SYN -m connlimit --connlimit-above 15 --connlimit-mask 32 --connlimit-saddr -j DROP
-A INPUT -p tcp -m state --state RELATED,ESTABLISHED -j ACCEPT
-A FORWARD -j REJECT --reject-with icmp-host-prohibited
-A OUTPUT -p tcp -m state --state NEW -m tcp --dport 3000:3005 -j ACCEPT
-A syn-flood -p tcp -m limit --limit 3/sec --limit-burst 6 -j RETURN
-A syn-flood -j REJECT --reject-with icmp-port-unreachable
COMMIT
# Completed on Sat Sep 14 14:44:03 2019
